force-app/main/default/objects/Extended_Data__c.object
<CustomObject>
    <fields>
        <fullName>NaCA_ChildAccessToComputer__c</fullName>
        <description>The student will have the use of a dedicated computer</description>
        <label>NaCA ChildAccessToComputer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NaCA_ChildAccessToPhone__c</fullName>
        <description>The student will have access to a phone (cell phone or home phone)</description>
        <label>NaCA ChildAccessToPhone</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NaCA_Child_InternetConnection__c</fullName>
        <description>The student will have the use of an Internet connection that can support the activities of this virtual program</description>
        <label>NaCA Child InternetConnection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NaCA_ChildrenCurrentlyEnrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the household currently have any children enrolled in Connections Academy or International Connections Academy</description>
        <label>NaCA ChildrenCurrentlyEnrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NaCA_InternetConnectionTypeHH__c</fullName>
        <description>Type of home internet connection</description>
        <label>NaCA InternetConnectionTypeHH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>Other - High Speed</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NaCA_InternetProviderHH__c</fullName>
        <description>name of the home Internet provider</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NaCA InternetProviderHH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaCA_Release_Directory_NoHS__c</fullName>
        <description>This student is NOT in high school and CT wishes to deny the release of Directory Information as follows</description>
        <label>NaCA Release Directory NoHS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not release this information to any agencies, organizations, or third parties.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCA_Computer_Usage_Info__c</fullName>
        <description>Please select the option below that indicates the computer selection for your student for the 2018-2019 school year</description>
        <label>OCA Computer Usage Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1: Connections Academy Computer / Temporary Use of Another Computer</fullName>
                </value>
                <value>
                    <fullName>2: Connections Academy Computer</fullName>
                </value>
                <value>
                    <fullName>3: Shared Connections Academy Computer</fullName>
                </value>
                <value>
                    <fullName>4: Family-owned Home Computer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCA_State_Test_Scores_Status__c</fullName>
        <description>OCA Status of State Test Scores</description>
        <label>OCA State Test Scores Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid- Ready for Placement</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCA_Students_Schooled_at_Home__c</fullName>
        <description>Number of students who are enrolling or enrolled in Ohio Connections Academy</description>
        <label>OCA Students Schooled at Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEA_Date_of_Eligibility_Approval__c</fullName>
        <description>Date of eligibility approval</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OEA Date of Eligibility Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OEA_Dept_of_Ed_Status__c</fullName>
        <description>Department of Ed Status</description>
        <label>OEA Dept of Ed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEA_Grade__c</fullName>
        <description>Grade listed on the OEA</description>
        <label>OEA Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OH_Resident_District_Verified_Status__c</fullName>
        <description>Resident District Verified</description>
        <label>OH Resident District Verified Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address change</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OKCA_Registration_Date__c</fullName>
        <description>OKCA_RegistrationDate</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OKCA Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OKCA_VoTech_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student been approved to attend their local Career and Technical Education (CTE) center (Vo-Tech) for part of the school day</description>
        <label>OKCA VoTech Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_Promise_Information__c</fullName>
        <description>Would the CT like to discuss the Oklahoma&apos;s Promise scholarship with their counselor</description>
        <label>OK Promise Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Promise_Participation__c</fullName>
        <description>Is the student currently participating in the Oklahoma&apos;s Promise scholarship</description>
        <label>OK Promise Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORCA_CTE_Interest__c</fullName>
        <description>Area of interest in learning more about the career-focused learning opportunities at ORCA</description>
        <label>ORCA CTE Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Computer Sciences</fullName>
                </value>
                <value>
                    <fullName>Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Not interested at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Military_Survey__c</fullName>
        <label>Prior Military Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Neither parent nor guardian is serving in any military service.</fullName>
                </value>
                <value>
                    <fullName>1 - A parent or guardian is serving in the National Guard but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>2 - A parent or guardian is serving in the Reserves but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>3 - A parent or guardian is serving in the National Guard and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>4 - A parent or guardian is serving in the Reserves and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>5 - A parent or guardian is serving in the military on active duty but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>6 - A parent or guardian is serving in the military on active duty and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>7 - A parent or guardian died while on active duty within the last year.</fullName>
                </value>
                <value>
                    <fullName>8 - A parent or guardian (veteran) was medically discharged or retired for (1) year.</fullName>
                </value>
                <value>
                    <fullName>9 - Decline to report</fullName>
                </value>
                <value>
                    <fullName>Active Duty - US Army</fullName>
                </value>
                <value>
                    <fullName>Active Duty - US Air Force</fullName>
                </value>
                <value>
                    <fullName>Active Duty - US Navy</fullName>
                </value>
                <value>
                    <fullName>Active Duty - US Marines</fullName>
                </value>
                <value>
                    <fullName>Active Duty - United States Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves - US Army</fullName>
                </value>
                <value>
                    <fullName>Reserves - US Air Force</fullName>
                </value>
                <value>
                    <fullName>Reserves - US Navy</fullName>
                </value>
                <value>
                    <fullName>Reserves - US Marines</fullName>
                </value>
                <value>
                    <fullName>National Guard - US Army</fullName>
                </value>
                <value>
                    <fullName>National Guard - US Air Force</fullName>
                </value>
                <value>
                    <fullName>Reserves - Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Parents serve in multiple branches</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_TX_Public_Discrepancy_Notes__c</fullName>
        <description>What is the data issue</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior TX Public Discrepancy Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_TX_Public_Discrepancy__c</fullName>
        <description>Issue with Connexus Data</description>
        <label>Prior TX Public Discrepancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_TX_Public_School_Eligibility__c</fullName>
        <description>Prior TX Public School Eligibility</description>
        <label>Prior TX Public School Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Attend TX Public School in Prior School Year</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE - Exception-Previously attended a TX high school</fullName>
                </value>
                <value>
                    <fullName>Exception-Fostercare</fullName>
                </value>
                <value>
                    <fullName>Exception-Military</fullName>
                </value>
                <value>
                    <fullName>Not Found in State System-Family plans to register in TX public school for next/current school year</fullName>
                </value>
                <value>
                    <fullName>Not Found in State System-Parent submitting proof of eligibility</fullName>
                </value>
                <value>
                    <fullName>Prior TX Public Schooling Verified</fullName>
                </value>
                <value>
                    <fullName>Prior TX Public Summer Schooling Verified</fullName>
                </value>
                <value>
                    <fullName>Texas Tech Univ/Univ of TX Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The Program Enrollment record of the student or caretaker depending on record context</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Extended Data</relationshipLabel>
        <relationshipName>Extended_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reach_5_Day_Process_Counter__c</fullName>
        <description>Day</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reach 5 Day Process Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reach_5_Day_Process_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reach 5 Day Process Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reach_Available_Academic_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you able to submit a copy of  your student’s most recent academic documentation at the same time as the required enrollment documents</description>
        <label>Reach Available Academic Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAU_Notice_Date__c</fullName>
        <description>Date Notice Sent to SAU</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAU Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCCA_AttendanceReportStatus__c</fullName>
        <description>Attendance Report Status</description>
        <label>SCCA AttendanceReportStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid (Need EOY Report)</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Principal Review</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCCA_HomeSchoolMembershpStatus__c</fullName>
        <description>Proof of Homeschool Membership Status</description>
        <label>SCCA HomeSchoolMembershpStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCCA_Prior_Military_Survey__c</fullName>
        <description>What is the current U.S. military status of the student&apos;s parent or guardian</description>
        <label>SCCA Prior Military Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - A Parent or Guardian is serving in the National Guard but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>02 - A Parent or Guardian is serving in the Reserves but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>03 - A Parent or Guardian is serving in the National Guard and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>04 - A Parent or Guardian is serving in the Reserves and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>05 - A Parent or Guardian is serving in the military on active duty but is not deployed.</fullName>
                </value>
                <value>
                    <fullName>06 - A Parent or Guardian is serving in the military on active duty and is currently deployed.</fullName>
                </value>
                <value>
                    <fullName>07 - The student&apos;s Parent or Guardian died while on active duty within the last year.</fullName>
                </value>
                <value>
                    <fullName>08 - The student&apos;s Parent or Guardian was wounded while on active duty within the last year.</fullName>
                </value>
                <value>
                    <fullName>09 Decline to report</fullName>
                </value>
                <value>
                    <fullName>Neither Parent nor Guardian is serving in any military service.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIF_EverAuthorizeSDName__c</fullName>
        <description>Name of School</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SIF EverAuthorizeSDName</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIF_EverAuthorizerSD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student ever attended a Hillsborough County Public School</description>
        <label>SIF EverAuthorizerSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIF_Took_GA_Milestones__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student taken the Georgia Milestones for the 2017–2018 school year</description>
        <label>SIF Took GA Milestones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Extended Data</relationshipLabel>
        <relationshipName>Extended_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCAH_CT_Proof_of_Identity__c</fullName>
        <description>Caretaker Proof of Identity- State Photo ID</description>
        <label>TCAH CT Proof of Identity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCAH_Pre_Enrollment_Meeting__c</fullName>
        <description>Pre-Enrollment Meeting Status</description>
        <label>TCAH Pre Enrollment Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Released (Attended)</fullName>
                </value>
                <value>
                    <fullName>Released (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECCA_Enrollment_Preference__c</fullName>
        <description>If indicated that the student&apos;s situation may indicate enrollment preference, please provide a brief explanation of why you made the selection(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TECCA Enrollment Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECCA_Family_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Spring of school year (March through June ), will the student(s) have a need to travel outside of Massachusetts for any reason</description>
        <label>TECCA Family Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECCA_Is_a_District_Member_of_TEC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student resides within one of the districts that are members of The Education Cooperative (TEC)</description>
        <label>TECCA Is a District Member of TEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECCA_Lottery_Selected_Date__c</fullName>
        <description>Date selected in lottery</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TECCA Lottery Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECCA_Not_TEC_District_Situation__c</fullName>
        <description>If you indicated no, your student does not reside within one of the member school districts of The Education Cooperative (TEC), please review the following list of additional student situations that can result in enrollment preference. You may choose more than one selection or indicate that none of the situations apply. Please note that relevant documentation substantiating any claim for preference may be requested</description>
        <label>TECCA Not TEC District Situation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biological or adopted sibling of a student currently attending TECCA.</fullName>
                </value>
                <value>
                    <fullName>None of these situations apply to my student.</fullName>
                </value>
                <value>
                    <fullName>Students in institutionalized settings.</fullName>
                </value>
                <value>
                    <fullName>Students residing in rural communities.</fullName>
                </value>
                <value>
                    <fullName>Students who are gifted and talented.</fullName>
                </value>
                <value>
                    <fullName>Students who are over-age for their grade.</fullName>
                </value>
                <value>
                    <fullName>Students who are pregnant or who have a child.</fullName>
                </value>
                <value>
                    <fullName>Students who feel bullied or who are out of school due to other safety concerns.</fullName>
                </value>
                <value>
                    <fullName>Students who have been expelled.</fullName>
                </value>
                <value>
                    <fullName>Students who have or are at risk of dropping out.</fullName>
                </value>
                <value>
                    <fullName>Students who seek academic work not available in their school.</fullName>
                </value>
                <value>
                    <fullName>Students with disabilities.</fullName>
                </value>
                <value>
                    <fullName>Students with medical needs requiring a home or hospital setting.</fullName>
                </value>
                <value>
                    <fullName>Students with unusual needs requiring a flexible schedule.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECCA_Start_Up_Day_to_Contact__c</fullName>
        <description>Best Day to Contact</description>
        <label>TECCA Start Up Day to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECCA_Start_Up_Student_504__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student has the most current IEP/504 uploaded</description>
        <label>TECCA Start Up Student 504</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECCA_Start_Up_Time_to_Contact__c</fullName>
        <description>Best Time to Contact</description>
        <label>TECCA Start Up Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1:00pm-2:00pm</fullName>
                </value>
                <value>
                    <fullName>10:00am-11:00am</fullName>
                </value>
                <value>
                    <fullName>11:00am-12:00pm</fullName>
                </value>
                <value>
                    <fullName>12:00pm-1:00pm</fullName>
                </value>
                <value>
                    <fullName>2:00pm-3:00pm</fullName>
                </value>
                <value>
                    <fullName>3:00pm-4:00pm</fullName>
                </value>
                <value>
                    <fullName>8:00am-9:00am</fullName>
                </value>
                <value>
                    <fullName>9:00am-10:00am</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEC_Student_Status__c</fullName>
        <description>TEC Student Status</description>
        <label>TEC Student Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not a TEC Student</fullName>
                </value>
                <value>
                    <fullName>Potential TEC Student</fullName>
                </value>
                <value>
                    <fullName>Verified TEC Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TN_PriorAuthorizerPreK__c</fullName>
        <description>Did the student attend a public Pre-K program in the Robertson County Public School District</description>
        <label>TN Prior Authorized Pre School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TN_PriorAuthorizer__c</fullName>
        <description>Has the student ever attended a Robertson County Public School?</description>
        <label>TN Prior Authorized Public School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Date_Home_School_Begins__c</fullName>
        <description>Date home schooling began</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TX Date Home School Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TX_Date_Move_Out_Of_Country__c</fullName>
        <description>Date moving out of country</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TX Date Move Out Of Country</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TX_Home_School_Curr_Meets_Base_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the curriculum meet the basic educational goals of reading, spelling, grammar, mathematics, and a course in good citizenship</description>
        <label>TX Home School Curr Meets Base Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Home_School_Curriculum_Direction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student pursuing the curriculum in a bona fide manner under the direction of a parent or parents or one standing in parental authority</description>
        <label>TX Home School Curriculum Direction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Home_School_Curriculum_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a curriculum consisting of books, workbooks or other written materials</description>
        <label>TX Home School Curriculum Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Home_School_Free_or_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student enrolled in a tuition-based diploma program</description>
        <label>TX Home School Free or Fee</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>